--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.52.2",
     "axios": "^1.7.5",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
